syntax = "proto3";
package clicks.v1;

message Click {
    int32 tile_id = 1;
    string country_id = 2;
    uint64 timestamp_ns = 3;
    string click_id = 4;
}

message ClickRequest {
    int32 tile_id = 1;
    string country_id = 2;
}

message ClickResponse {
    uint64 timestamp_ns = 1;
    string click_id = 2;
}

message BatchRequest {
    int32 start_tile_id = 1;
    int32 end_tile_id = 2;
}

message Ownership {
    uint32 tile_id = 1;
    string country_id = 2;
}

message OwnershipState {
    repeated Ownership ownerships = 1;
}

message UpdateNotification {
    int32 tile_id = 1;
    string country_id = 2;
    string previous_country_id = 3;
}

message MapDensityResponse {
    int32 density = 1;
}
